k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        cert-manager.io/cluster-issuer: 'letsencrypt-prod'
        nginx.ingress.kubernets.io/ssl-redirect: 'true'
spec:
    tls:
        - hosts:
              - k8s.duosync.pt
              - www.k8s.duosync.pt
          secretName: k8s-duosync-pt
    rules:
        - host: k8s.duosync.pt
          http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: client-cluster-ip-service
                        servicePort: 3000
                  - path: /api/?(.*)
                    backend:
                        serviceName: server-cluster-ip-service
                        servicePort: 5000
        - host: www.k8s.duosync.pt
          http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: client-cluster-ip-service
                        servicePort: 3000
                  - path: /api/?(.*)
                    backend:
                        serviceName: server-cluster-ip-service
                        servicePort: 5000
